TestSuite/errors/err0075.pas
  	 uses System;

function f(i: integer): void;
begin
end;

begin
  write(f(1));
end.